scanner.c
/* Generated by re2c 0.13.5 on Mon Jul 29 14:15:25 2013 */
// 1 "scanner.re"


#include "string.h"
#include "scanner.h"

#define YYCTYPE unsigned char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER q

int xx_get_token(xx_scanner_state *s, xx_scanner_token *token) {

	char next, *q = YYCURSOR, *start = YYCURSOR;
	int status = XX_SCANNER_RETCODE_IMPOSSIBLE;

	while (XX_SCANNER_RETCODE_IMPOSSIBLE == status) {

		
// 22 "scanner.c"
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy63;
			case '\t':
			case '\r':
			case ' ':	goto yy59;
			case '\n':	goto yy61;
			case '!':	goto yy43;
			case '"':	goto yy23;
			case '\'':	goto yy25;
			case '(':	goto yy29;
			case ')':	goto yy31;
			case '+':	goto yy51;
			case ',':	goto yy57;
			case '-':	goto yy2;
			case '/':	goto yy26;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy4;
			case ':':	goto yy53;
			case ';':	goto yy55;
			case '<':	goto yy47;
			case '=':	goto yy45;
			case '>':	goto yy49;
			case '@':	goto yy41;
			case 'A':
			case 'a':	goto yy10;
			case 'B':
			case 'b':	goto yy17;
			case 'C':
			case 'c':	goto yy11;
			case 'D':
			case 'd':	goto yy16;
			case 'E':
			case 'e':	goto yy12;
			case 'F':
			case 'f':	goto yy8;
			case 'G':
			case 'H':
			case 'J':
			case 'K':
			case 'M':
			case 'O':
			case 'Q':
			case 'X':
			case 'Y':
			case 'Z':
			case 'g':
			case 'h':
			case 'j':
			case 'k':
			case 'm':
			case 'o':
			case 'q':
			case 'x':
			case 'y':
			case 'z':	goto yy28;
			case 'I':
			case 'i':	goto yy15;
			case 'L':
			case 'l':	goto yy14;
			case 'N':
			case 'n':	goto yy6;
			case 'P':
			case 'p':	goto yy13;
			case 'R':
			case 'r':	goto yy21;
			case 'S':
			case 's':	goto yy18;
			case 'T':
			case 't':	goto yy9;
			case 'U':
			case 'u':	goto yy22;
			case 'V':
			case 'v':	goto yy19;
			case 'W':
			case 'w':	goto yy20;
			case '[':	goto yy37;
			case '\\':
			case '_':	goto yy27;
			case ']':	goto yy39;
			case '{':	goto yy33;
			case '}':	goto yy35;
			default:	goto yy65;
			}
yy2:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '-':	goto yy285;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy280;
			case '>':	goto yy287;
			default:	goto yy3;
			}
yy3:
// 407 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_SUB;
			return 0;
		}
// 143 "scanner.c"
yy4:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			goto yy281;
yy5:
// 23 "scanner.re"
			{
			token->opcode = XX_T_INTEGER;
			token->value = strndup(start, YYCURSOR - start);
			token->len = YYCURSOR - start;
			s->active_char += (YYCURSOR - start);
			q = YYCURSOR;
			return 0;
		}
// 158 "scanner.c"
yy6:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case 'A':
			case 'a':	goto yy263;
			case 'E':
			case 'e':	goto yy264;
			case 'U':
			case 'u':	goto yy265;
			default:	goto yy79;
			}
yy7:
// 296 "scanner.re"
			{
			token->opcode = XX_T_IDENTIFIER;
			token->value = strndup(start, YYCURSOR - start);
			token->len = YYCURSOR - start;
			s->active_char += (YYCURSOR - start);
			q = YYCURSOR;
			return 0;
		}
// 180 "scanner.c"
yy8:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy240;
			case 'L':
			case 'l':	goto yy241;
			case 'N':
			case 'n':	goto yy242;
			case 'O':
			case 'o':	goto yy244;
			case 'U':
			case 'u':	goto yy245;
			default:	goto yy79;
			}
yy9:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'H':
			case 'h':	goto yy225;
			case 'R':
			case 'r':	goto yy226;
			case 'Y':
			case 'y':	goto yy227;
			default:	goto yy79;
			}
yy10:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'B':
			case 'b':	goto yy217;
			default:	goto yy79;
			}
yy11:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'L':
			case 'l':	goto yy201;
			case 'O':
			case 'o':	goto yy202;
			default:	goto yy79;
			}
yy12:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'C':
			case 'c':	goto yy186;
			case 'L':
			case 'l':	goto yy187;
			case 'X':
			case 'x':	goto yy188;
			default:	goto yy79;
			}
yy13:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy171;
			case 'U':
			case 'u':	goto yy172;
			default:	goto yy79;
			}
yy14:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy161;
			case 'O':
			case 'o':	goto yy162;
			default:	goto yy79;
			}
yy15:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'F':
			case 'f':	goto yy141;
			case 'N':
			case 'n':	goto yy143;
			case 'S':
			case 's':	goto yy145;
			default:	goto yy79;
			}
yy16:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'O':
			case 'o':	goto yy135;
			default:	goto yy79;
			}
yy17:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'O':
			case 'o':	goto yy122;
			case 'R':
			case 'r':	goto yy123;
			default:	goto yy79;
			}
yy18:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'T':
			case 't':	goto yy116;
			default:	goto yy79;
			}
yy19:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy113;
			default:	goto yy79;
			}
yy20:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'H':
			case 'h':	goto yy108;
			default:	goto yy79;
			}
yy21:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy102;
			default:	goto yy79;
			}
yy22:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'N':
			case 'n':	goto yy97;
			default:	goto yy79;
			}
yy23:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych >= 0x01) goto yy95;
yy24:
// 461 "scanner.re"
			{
			status = XX_SCANNER_RETCODE_ERR;
			break;
		}
// 324 "scanner.c"
yy25:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy24;
			goto yy89;
yy26:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case '*':	goto yy83;
			case '/':	goto yy80;
			default:	goto yy24;
			}
yy27:
			yych = *++YYCURSOR;
			goto yy79;
yy28:
			yych = *++YYCURSOR;
			goto yy79;
yy29:
			++YYCURSOR;
// 305 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_PARENTHESES_OPEN;
			return 0;
		}
// 352 "scanner.c"
yy31:
			++YYCURSOR;
// 311 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_PARENTHESES_CLOSE;
			return 0;
		}
// 361 "scanner.c"
yy33:
			++YYCURSOR;
// 317 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_BRACKET_OPEN;
			return 0;
		}
// 370 "scanner.c"
yy35:
			++YYCURSOR;
// 323 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_BRACKET_CLOSE;
			return 0;
		}
// 379 "scanner.c"
yy37:
			++YYCURSOR;
// 329 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_SBRACKET_OPEN;
			return 0;
		}
// 388 "scanner.c"
yy39:
			++YYCURSOR;
// 335 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_SBRACKET_CLOSE;
			return 0;
		}
// 397 "scanner.c"
yy41:
			++YYCURSOR;
// 341 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_AT;
			return 0;
		}
// 406 "scanner.c"
yy43:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy74;
			default:	goto yy44;
			}
yy44:
// 347 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_NOT;
			return 0;
		}
// 420 "scanner.c"
yy45:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy70;
			default:	goto yy46;
			}
yy46:
// 353 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_ASSIGN;
			return 0;
		}
// 434 "scanner.c"
yy47:
			++YYCURSOR;
// 383 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_LESS;
			return 0;
		}
// 443 "scanner.c"
yy49:
			++YYCURSOR;
// 389 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_GREATER;
			return 0;
		}
// 452 "scanner.c"
yy51:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '+':	goto yy68;
			default:	goto yy52;
			}
yy52:
// 401 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_ADD;
			return 0;
		}
// 466 "scanner.c"
yy53:
			++YYCURSOR;
// 425 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_COLON;
			return 0;
		}
// 475 "scanner.c"
yy55:
			++YYCURSOR;
// 431 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_DOTCOMMA;
			return 0;
		}
// 484 "scanner.c"
yy57:
			++YYCURSOR;
// 437 "scanner.re"
			{
			s->active_char++;
			token->opcode = XX_T_COMMA;
			return 0;
		}
// 493 "scanner.c"
yy59:
			++YYCURSOR;
			yych = *YYCURSOR;
			goto yy67;
yy60:
// 443 "scanner.re"
			{
			s->active_char += (YYCURSOR - start);
			token->opcode = XX_T_IGNORE;
			return 0;
		}
// 505 "scanner.c"
yy61:
			++YYCURSOR;
// 449 "scanner.re"
			{
			s->active_line++;
			s->active_char = 0;
			token->opcode = XX_T_IGNORE;
			return 0;
		}
// 515 "scanner.c"
yy63:
			++YYCURSOR;
// 456 "scanner.re"
			{
			status = XX_SCANNER_RETCODE_EOF;
			break;
		}
// 523 "scanner.c"
yy65:
			yych = *++YYCURSOR;
			goto yy24;
yy66:
			++YYCURSOR;
			yych = *YYCURSOR;
yy67:
			switch (yych) {
			case '\t':
			case '\r':
			case ' ':	goto yy66;
			default:	goto yy60;
			}
yy68:
			++YYCURSOR;
// 413 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = XX_T_INCR;
			return 0;
		}
// 545 "scanner.c"
yy70:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy72;
			default:	goto yy71;
			}
yy71:
// 359 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = XX_T_EQUALS;
			return 0;
		}
// 559 "scanner.c"
yy72:
			++YYCURSOR;
// 371 "scanner.re"
			{
			s->active_char += 3;
			token->opcode = XX_T_IDENTICAL;
			return 0;
		}
// 568 "scanner.c"
yy74:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '=':	goto yy76;
			default:	goto yy75;
			}
yy75:
// 365 "scanner.re"
			{
			s->active_char += 2;
			token->opcode = XX_T_NOTEQUALS;
			return 0;
		}
// 582 "scanner.c"
yy76:
			++YYCURSOR;
// 377 "scanner.re"
			{
			s->active_char += 3;
			token->opcode = XX_T_NOTIDENTICAL;
			return 0;
		}
// 591 "scanner.c"
yy78:
			++YYCURSOR;
			yych = *YYCURSOR;
yy79:
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy78;
			default:	goto yy7;
			}
yy80:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '\n':
			case '\r':	goto yy82;
			default:	goto yy80;
			}
yy82:
// 275 "scanner.re"
			{
			token->opcode = XX_T_COMMENT;
			token->value = strndup(q, YYCURSOR - q - 1);
			token->len = YYCURSOR - q - 1;
			{
				int k, ch = s->active_char;
				for (k = 0; k < (token->len - 1); k++) {
					if (token->value[k] == '\n') {
						ch = 1;
						s->active_line++;
					} else {
						ch++;
					}
				}
				s->active_char = ch;
			}
			q = YYCURSOR;
			return 0;
		}
// 692 "scanner.c"
yy83:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '*':	goto yy85;
			default:	goto yy83;
			}
yy85:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '*':	goto yy85;
			case '/':	goto yy87;
			default:	goto yy83;
			}
yy87:
			yych = *++YYCURSOR;
			goto yy82;
yy88:
			++YYCURSOR;
			yych = *YYCURSOR;
yy89:
			switch (yych) {
			case 0x00:	goto yy90;
			case '\'':	goto yy92;
			case '\\':	goto yy91;
			default:	goto yy88;
			}
yy90:
			YYCURSOR = YYMARKER;
			switch (yyaccept) {
			case 0: 	goto yy5;
			case 1: 	goto yy24;
			}
yy91:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '\n':	goto yy90;
			default:	goto yy88;
			}
yy92:
			++YYCURSOR;
// 265 "scanner.re"
			{
			token->opcode = XX_T_STRING;
			token->value = strndup(q, YYCURSOR - q - 1);
			token->len = YYCURSOR - q - 1;
			s->active_char += (YYCURSOR - start);
			q = YYCURSOR;
			return 0;
		}
// 745 "scanner.c"
yy94:
			++YYCURSOR;
			yych = *YYCURSOR;
yy95:
			switch (yych) {
			case 0x00:	goto yy90;
			case '"':	goto yy92;
			case '\\':	goto yy96;
			default:	goto yy94;
			}
yy96:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '\n':	goto yy90;
			default:	goto yy94;
			}
yy97:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'S':
			case 's':	goto yy98;
			default:	goto yy79;
			}
yy98:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy99;
			default:	goto yy79;
			}
yy99:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'T':
			case 't':	goto yy100;
			default:	goto yy79;
			}
yy100:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy78;
			default:	goto yy101;
			}
yy101:
// 252 "scanner.re"
			{
			token->opcode = XX_T_UNSET;
			s->active_char += sizeof("unset")-1;
			return 0;
		}
// 860 "scanner.c"
yy102:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'T':
			case 't':	goto yy103;
			default:	goto yy79;
			}
yy103:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'U':
			case 'u':	goto yy104;
			default:	goto yy79;
			}
yy104:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy105;
			default:	goto yy79;
			}
yy105:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'N':
			case 'n':	goto yy106;
			default:	goto yy79;
			}
yy106:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy78;
			default:	goto yy107;
			}
yy107:
// 210 "scanner.re"
			{
			s->active_char += sizeof("return")-1;
			token->opcode = XX_T_RETURN;
			return 0;
		}
// 965 "scanner.c"
yy108:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'I':
			case 'i':	goto yy109;
			default:	goto yy79;
			}
yy109:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'L':
			case 'l':	goto yy110;
			default:	goto yy79;
			}
yy110:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy111;
			default:	goto yy79;
			}
yy111:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy78;
			default:	goto yy112;
			}
yy112:
// 186 "scanner.re"
			{
			s->active_char += sizeof("while")-1;
			token->opcode = XX_T_WHILE;
			return 0;
		}
// 1063 "scanner.c"
yy113:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy114;
			default:	goto yy79;
			}
yy114:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '\\':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy78;
			default:	goto yy115;
			}
yy115:
// 168 "scanner.re"
			{
			s->active_char += sizeof("var")-1;
			token->opcode = XX_T_TYPE_VAR;
			return 0;
		}
// 1147 "scanner.c"
yy116:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy117;
			default:	goto yy79;
